Updated Pippo Session to JDK8